--- a/index.html
+++ b/index.html
@@ -1,15 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Devon Gardner</title>
-	<link href="css/style.css" rel="stylesheet">
-</head>
-
-<body>
-
-</body>
-
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Devon Gardner</title>
+    <link href="css/style.css" rel="stylesheet">
+  </head>
+  <body>
+    <h1>Neovim Logo</h1>
+    <img src="./images/Neovim-mark.svg" alt="Neovim logo">
+  </body>
 </html>
