added arch linux logo

--- a/index.html
+++ b/index.html
@@ -9,5 +9,7 @@
   <body>
     <h1>Neovim Logo</h1>
     <img src="./images/Neovim-mark.svg" alt="Neovim logo">
+    <h1>Arch Logo</h1>
+    <img src="./images/archlinux-logo.svg" alt="Arch Linux logo">
   </body>
 </html>
